--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">368</td><td></td><td></td></tr>
+<tr><th colspan="8">WebClientSaasAppSuite</th></tr>
+<tr><td><a href="#t0">WebClientSaasAppTest</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">26,843</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">unittest.UnitTest</td><td><a href="#m0">ReportClass</a></td><td rowspan="1">1649302582603</td><td rowspan="1">334</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">WebClientSaasAppSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">WebClientSaasAppTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.saas.app.testCases.TC_ContactsPage</td><td><a href="#m0">createNewContact</a></td><td rowspan="1">1649611168570</td><td rowspan="1">17458</td></tr><tr class="passedodd"><td rowspan="1">com.saas.app.testCases.TC_HomePage</td><td><a href="#m1">homePageTest</a></td><td rowspan="1">1649611168534</td><td rowspan="1">36</td></tr><tr class="passedeven"><td rowspan="1">com.saas.app.testCases.TC_LoginPage</td><td><a href="#m2">loginPageTest</a></td><td rowspan="1">1649611159693</td><td rowspan="1">8837</td></tr><tr class="passedodd"><td rowspan="1">com.saas.app.testCases.TC_LogoutPage</td><td><a href="#m3">logoutPageTest</a></td><td rowspan="1">1649611186032</td><td rowspan="1">474</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">unittest.UnitTest#ReportClass</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>WebClientSaasAppTest</h2><h3 id="m0">com.saas.app.testCases.TC_ContactsPage#createNewContact</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.saas.app.testCases.TC_HomePage#homePageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.saas.app.testCases.TC_LoginPage#loginPageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.saas.app.testCases.TC_LogoutPage#logoutPageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
