--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be877d">  <td>22/04/10 22:06:09</td>   <td>0</td> <td title="&gt;&gt;BaseClass.initEnvironment()[pri:0, instance:unittest.UnitTest@60641ec8]">&gt;&gt;initEnvironment</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1527214863</td>   <td></td> </tr>
-<tr bgcolor="be877d">  <td>22/04/10 22:07:07</td>   <td>58012</td> <td title="&lt;&lt;BaseClass.shutDownEnvironment()[pri:0, instance:unittest.UnitTest@60641ec8]">&lt;&lt;shutDownEnvironment</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1527214863</td>   <td></td> </tr>
-<tr bgcolor="d6d4b7">  <td>22/04/10 22:06:47</td>   <td>37556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UnitTest.test()[pri:0, instance:unittest.UnitTest@60641ec8]">test</td> 
-  <td>main@1527214863</td>   <td></td> </tr>
+<tr bgcolor="f8b2dc">  <td>22/04/24 12:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.registerUser(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@5e81e5ac]">registerUser</td> 
+  <td>main@694069884</td>   <td></td> </tr>
+<tr bgcolor="f8b2dc">  <td>22/04/24 12:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.registerUser(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@5e81e5ac]">registerUser</td> 
+  <td>main@694069884</td>   <td></td> </tr>
+<tr bgcolor="f8b2dc">  <td>22/04/24 12:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.registerUser(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@5e81e5ac]">registerUser</td> 
+  <td>main@694069884</td>   <td></td> </tr>
+<tr bgcolor="f8b2dc">  <td>22/04/24 12:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.registerUser(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@5e81e5ac]">registerUser</td> 
+  <td>main@694069884</td>   <td></td> </tr>
+<tr bgcolor="f8b2dc">  <td>22/04/24 12:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.registerUser(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@5e81e5ac]">registerUser</td> 
+  <td>main@694069884</td>   <td></td> </tr>
+<tr bgcolor="f8b2dc">  <td>22/04/24 12:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.registerUser(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@5e81e5ac]">registerUser</td> 
+  <td>main@694069884</td>   <td></td> </tr>
 </table>
