--- a/test-output/old/WebClientSaasAppSuite/classes.html
+++ b/test-output/old/WebClientSaasAppSuite/classes.html
@@ -4,28 +4,6 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.saas.app.testCases.TC_HomePage</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>homePageTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
 <td>com.saas.app.testCases.TC_LoginPage</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -33,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginPageTest</td>
+<td>valLoginPageTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -77,7 +55,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createNewContact</td>
+<td>valCreateNewContact</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
