--- a/test-output/old/WebClientSaasAppSuite/methods.html
+++ b/test-output/old/WebClientSaasAppSuite/methods.html
@@ -1,16 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>WebClientSaasAppSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d29ab9">  <td>22/04/10 22:49:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_HomePage.homePageTest()[pri:0, instance:com.saas.app.testCases.TC_HomePage@5c8eee0f]">homePageTest</td> 
-  <td>main@348132918</td>   <td></td> </tr>
-<tr bgcolor="7484b5">  <td>22/04/10 22:49:46</td>   <td>17498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LogoutPage.logoutPageTest()[pri:0, instance:com.saas.app.testCases.TC_LogoutPage@26425897]">logoutPageTest</td> 
-  <td>main@348132918</td>   <td></td> </tr>
-<tr bgcolor="8460f6">  <td>22/04/10 22:49:46</td>   <td>17996</td> <td title="&lt;&lt;BaseClass.shutDownEnvironment()[pri:0, instance:com.saas.app.testCases.TC_LoginPage@75390459]">&lt;&lt;shutDownEnvironment</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348132918</td>   <td></td> </tr>
-<tr bgcolor="d6d4b7">  <td>22/04/10 22:49:19</td>   <td>-8841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPage.loginPageTest()[pri:0, instance:com.saas.app.testCases.TC_LoginPage@75390459]">loginPageTest</td> 
-  <td>main@348132918</td>   <td></td> </tr>
-<tr bgcolor="ac9487">  <td>22/04/10 22:49:28</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.createNewContact()[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@565b064f]">createNewContact</td> 
-  <td>main@348132918</td>   <td></td> </tr>
-<tr bgcolor="8460f6">  <td>22/04/10 22:49:10</td>   <td>-17978</td> <td title="&gt;&gt;BaseClass.initEnvironment()[pri:0, instance:com.saas.app.testCases.TC_LoginPage@75390459]">&gt;&gt;initEnvironment</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348132918</td>   <td></td> </tr>
+<tr bgcolor="78b06f">  <td>22/04/24 15:13:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.valCreateNewContact(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@2a3c96e3]">valCreateNewContact</td> 
+  <td>main@911501858</td>   <td></td> </tr>
+<tr bgcolor="78b06f">  <td>22/04/24 15:13:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.valCreateNewContact(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@2a3c96e3]">valCreateNewContact</td> 
+  <td>main@911501858</td>   <td></td> </tr>
+<tr bgcolor="78b06f">  <td>22/04/24 15:13:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.valCreateNewContact(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@2a3c96e3]">valCreateNewContact</td> 
+  <td>main@911501858</td>   <td></td> </tr>
+<tr bgcolor="78b06f">  <td>22/04/24 15:13:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.valCreateNewContact(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@2a3c96e3]">valCreateNewContact</td> 
+  <td>main@911501858</td>   <td></td> </tr>
+<tr bgcolor="78b06f">  <td>22/04/24 15:13:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.valCreateNewContact(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@2a3c96e3]">valCreateNewContact</td> 
+  <td>main@911501858</td>   <td></td> </tr>
+<tr bgcolor="d6a5b1">  <td>22/04/24 15:12:47</td>   <td>-40374</td> <td title="&gt;&gt;BaseClass.initEnvironment()[pri:0, instance:com.saas.app.testCases.TC_LoginPage@42e3ede4]">&gt;&gt;initEnvironment</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@911501858</td>   <td></td> </tr>
+<tr bgcolor="8460f6">  <td>22/04/24 15:13:00</td>   <td>-27468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPage.valLoginPageTest()[pri:0, instance:com.saas.app.testCases.TC_LoginPage@42e3ede4]">valLoginPageTest</td> 
+  <td>main@911501858</td>   <td></td> </tr>
+<tr bgcolor="d6a5b1">  <td>22/04/24 15:13:33</td>   <td>4894</td> <td title="&lt;&lt;BaseClass.shutDownEnvironment()[pri:0, instance:com.saas.app.testCases.TC_LoginPage@42e3ede4]">&lt;&lt;shutDownEnvironment</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@911501858</td>   <td></td> </tr>
+<tr bgcolor="ff64c2">  <td>22/04/24 15:13:32</td>   <td>4372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LogoutPage.logoutPageTest()[pri:0, instance:com.saas.app.testCases.TC_LogoutPage@15cafec7]">logoutPageTest</td> 
+  <td>main@911501858</td>   <td></td> </tr>
+<tr bgcolor="78b06f">  <td>22/04/24 15:13:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.valCreateNewContact(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@2a3c96e3]">valCreateNewContact</td> 
+  <td>main@911501858</td>   <td></td> </tr>
 </table>
