--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,17 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">WebClientSaasAppSuite</th></tr>
-<tr><td><a href="#t0">WebClientSaasAppTest</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">22,006</td><td></td><td></td></tr>
+<tr><th colspan="8">Web Client Saas Application Suite</th></tr>
+<tr><td><a href="#t0">Web Client Saas Application Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">15,259</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">WebClientSaasAppSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">WebClientSaasAppTest &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.saas.app.testCases.TC_LogoutPage</td><td><a href="#m0">logoutPageTest</a></td><td rowspan="1">1650819427319</td><td rowspan="1">1011</td></tr><tr><th colspan="4">WebClientSaasAppTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.saas.app.testCases.TC_ContactsPage</td><td><a href="#m1">valCreateNewContact</a></td><td rowspan="2">1650819422858</td><td rowspan="2">4461</td></tr><tr class="passedeven"><td><a href="#m2">valCreateNewContact</a></td></tr><tr class="passedodd"><td rowspan="1">com.saas.app.testCases.TC_LoginPage</td><td><a href="#m3">valLoginPageTest</a></td><td rowspan="1">1650819406463</td><td rowspan="1">8344</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Web Client Saas Application Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Web Client Saas Application Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.saas.app.testCases.TC_ContactsPage</td><td><a href="#m0">valCreateNewContact</a></td><td rowspan="2">1651403728782</td><td rowspan="2">4601</td></tr><tr class="passedeven"><td><a href="#m1">valCreateNewContact</a></td></tr><tr class="passedodd"><td rowspan="1">com.saas.app.testCases.TC_LoginPage</td><td><a href="#m2">valLoginPageTest</a></td><td rowspan="1">1651403723471</td><td rowspan="1">4689</td></tr><tr class="passedeven"><td rowspan="1">com.saas.app.testCases.TC_LogoutPage</td><td><a href="#m3">logoutPageTest</a></td><td rowspan="1">1651403737792</td><td rowspan="1">903</td></tr></tbody>
 </table>
-<h2>WebClientSaasAppTest</h2><h3 id="m0">com.saas.app.testCases.TC_LogoutPage#logoutPageTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.saas.app.testCases.TC_LogoutPage.logoutPageTest(TC_LogoutPage.java:21)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Web Client Saas Application Test</h2><h3 id="m0">com.saas.app.testCases.TC_ContactsPage#valCreateNewContact</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Name1</td><td>Testcust1</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.saas.app.testCases.TC_ContactsPage#valCreateNewContact</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Name2</td><td>Testcust2</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.saas.app.testCases.TC_ContactsPage#valCreateNewContact</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Name1</td><td>Testcust1</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.saas.app.testCases.TC_LoginPage#valLoginPageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.saas.app.testCases.TC_LoginPage#valLoginPageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.saas.app.testCases.TC_LogoutPage#logoutPageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
