--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f8b2dc">  <td>22/04/24 12:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.registerUser(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@5e81e5ac]">registerUser</td> 
-  <td>main@694069884</td>   <td></td> </tr>
-<tr bgcolor="f8b2dc">  <td>22/04/24 12:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.registerUser(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@5e81e5ac]">registerUser</td> 
-  <td>main@694069884</td>   <td></td> </tr>
-<tr bgcolor="f8b2dc">  <td>22/04/24 12:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.registerUser(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@5e81e5ac]">registerUser</td> 
-  <td>main@694069884</td>   <td></td> </tr>
-<tr bgcolor="f8b2dc">  <td>22/04/24 12:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.registerUser(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@5e81e5ac]">registerUser</td> 
-  <td>main@694069884</td>   <td></td> </tr>
-<tr bgcolor="f8b2dc">  <td>22/04/24 12:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.registerUser(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@5e81e5ac]">registerUser</td> 
-  <td>main@694069884</td>   <td></td> </tr>
-<tr bgcolor="f8b2dc">  <td>22/04/24 12:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.registerUser(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@5e81e5ac]">registerUser</td> 
-  <td>main@694069884</td>   <td></td> </tr>
+<tr bgcolor="f170ad">  <td>22/05/01 15:36:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UnitTest.extentReport()[pri:0, instance:unittest.UnitTest@48f278eb]">extentReport</td> 
+  <td>main@434398524</td>   <td></td> </tr>
 </table>
