--- a/test-output/old/Web Client Saas Application Suite/toc.html
+++ b/test-output/old/Web Client Saas Application Suite/toc.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>Results for WebClientSaasAppSuite</title>
+<title>Results for Web Client Saas Application Suite</title>
 <link href="../testng.css" rel="stylesheet" type="text/css" />
 <link href="../my-testng.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<h3><p align="center">Results for<br/><em>WebClientSaasAppSuite</em></p></h3>
+<h3><p align="center">Results for<br/><em>Web Client Saas Application Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
 <td>1 test</td>
@@ -22,8 +22,8 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>WebClientSaasAppTest (4/0/0)</td><td valign='top' align='right'>
-  <a href='WebClientSaasAppTest.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Web Client Saas Application Test (4/0/0)</td><td valign='top' align='right'>
+  <a href='Web Client Saas Application Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
