--- a/test-output/old/WebClientSaasAppSuite/methods.html
+++ b/test-output/old/WebClientSaasAppSuite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>WebClientSaasAppSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78b06f">  <td>22/04/24 22:27:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.valCreateNewContact(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@2a3c96e3]">valCreateNewContact</td> 
-  <td>main@911501858</td>   <td></td> </tr>
-<tr bgcolor="78b06f">  <td>22/04/24 22:27:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.valCreateNewContact(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@2a3c96e3]">valCreateNewContact</td> 
-  <td>main@911501858</td>   <td></td> </tr>
-<tr bgcolor="ff64c2">  <td>22/04/24 22:27:07</td>   <td>4461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LogoutPage.logoutPageTest()[pri:0, instance:com.saas.app.testCases.TC_LogoutPage@15cafec7]">logoutPageTest</td> 
-  <td>main@911501858</td>   <td></td> </tr>
-<tr bgcolor="d6a5b1">  <td>22/04/24 22:26:08</td>   <td>-54525</td> <td title="&gt;&gt;BaseClass.initEnvironment()[pri:0, instance:com.saas.app.testCases.TC_LoginPage@42e3ede4]">&gt;&gt;initEnvironment</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@911501858</td>   <td></td> </tr>
-<tr bgcolor="d6a5b1">  <td>22/04/24 22:27:08</td>   <td>5850</td> <td title="&lt;&lt;BaseClass.shutDownEnvironment()[pri:0, instance:com.saas.app.testCases.TC_LoginPage@42e3ede4]">&lt;&lt;shutDownEnvironment</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@911501858</td>   <td></td> </tr>
-<tr bgcolor="8460f6">  <td>22/04/24 22:26:46</td>   <td>-16396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPage.valLoginPageTest()[pri:0, instance:com.saas.app.testCases.TC_LoginPage@42e3ede4]">valLoginPageTest</td> 
-  <td>main@911501858</td>   <td></td> </tr>
+<tr bgcolor="70f8a6">  <td>22/04/27 22:32:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.valCreateNewContact(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@130c12b7]">valCreateNewContact</td> 
+  <td>main@212890971</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>22/04/27 22:32:34</td>   <td>4452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LogoutPage.logoutPageTest()[pri:0, instance:com.saas.app.testCases.TC_LogoutPage@5e600dd5]">logoutPageTest</td> 
+  <td>main@212890971</td>   <td></td> </tr>
+<tr bgcolor="6e9fae">  <td>22/04/27 22:31:50</td>   <td>-39461</td> <td title="&gt;&gt;BaseClass.initEnvironment()[pri:0, instance:com.saas.app.testCases.TC_LoginPage@3527942a]">&gt;&gt;initEnvironment</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@212890971</td>   <td></td> </tr>
+<tr bgcolor="96bacf">  <td>22/04/27 22:32:15</td>   <td>-14822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPage.valLoginPageTest()[pri:0, instance:com.saas.app.testCases.TC_LoginPage@3527942a]">valLoginPageTest</td> 
+  <td>main@212890971</td>   <td></td> </tr>
+<tr bgcolor="6e9fae">  <td>22/04/27 22:32:35</td>   <td>5473</td> <td title="&lt;&lt;BaseClass.shutDownEnvironment()[pri:0, instance:com.saas.app.testCases.TC_LoginPage@3527942a]">&lt;&lt;shutDownEnvironment</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@212890971</td>   <td></td> </tr>
+<tr bgcolor="70f8a6">  <td>22/04/27 22:32:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ContactsPage.valCreateNewContact(java.lang.String,java.lang.String)[pri:0, instance:com.saas.app.testCases.TC_ContactsPage@130c12b7]">valCreateNewContact</td> 
+  <td>main@212890971</td>   <td></td> </tr>
 </table>
